Bug 646259: Some trivial formatting fixes to deadlock detector output. r=bsmedberg